discussion/kv_engine/188092/188092_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: stats for wasted space

Change-Id: I92ae39b7bc81a9e2a05bc8808bde44b32183fe1a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2023-03-13 11:14:02.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-03-13 11:14:14.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/342755/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-13 11:20:45.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1338/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18: error: no member named "magma_l4" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::magma_l4, "magma_L4");
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2960:18: error: no member named "magma_l3" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::magma_l3, "magma_L3");
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2961:18: error: no member named "magma_wastedspace" in "cb::stats::Key"; did you mean "ep_magma_wastedspace"? [clang-diagnostic-error]
    addStat(Key::magma_wastedspace, "magma_WastedSpace");
                 ^~~~~~~~~~~~~~~~~
                 ep_magma_wastedspace
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/include/statistics/stats.def.h:309:6: note: "ep_magma_wastedspace" declared here
STAT(ep_magma_wastedspace, , bytes, , )
     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1338/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: no member named "magma_l4" in "cb::stats::Key" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1338/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1636/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/ep_engine.cc(2959): error C2838: "magma_l4": illegal qualified name in member declaration ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1636/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1291/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: no member named "magma_l4" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1291/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1365/ : FAILURE

Compile error at [2023-03-13T11:19:38.252Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: no member named "magma_l4" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1365/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1732/ : FAILURE

Compile error at [2023-03-13T11:17:42.579Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: no member named "magma_l4" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1732/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1362/ : FAILURE

Compile error at [2023-03-13T11:18:14.024Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: ?magma_l4? is not a member of ?cb::stats::Key?; did you mean ?ep_magma_l4??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1362/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1330/ : FAILURE

Compile error at [2023-03-13T11:16:42.626Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: no member named "magma_l4" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1330/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1369/ : FAILURE

Compile error at [2023-03-13T11:16:44.376Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: no member named "magma_l4" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1369/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1378/ : FAILURE

Compile error at [2023-03-13T11:19:58.674Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: ?magma_l4? is not a member of ?cb::stats::Key?; did you mean ?ep_magma_l4??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1378/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1372/ : FAILURE

Compile error at [2023-03-13T11:17:48.436Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/ep_engine.cc:2959:18:
error: ?magma_l4? is not a member of ?cb::stats::Key?; did you mean ?ep_magma_l4??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1372/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23156/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
